// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with no properties renders no properties 1`] = `
<div>
  <h2
    className="PropertyList-title"
  />
</div>
`;

exports[`with some properties renders each property 1`] = `
<div>
  <h2
    className="PropertyList-title"
  />
  <PropertyContainer
    id="1"
    key="1"
  />
  <PropertyContainer
    id="2"
    key="2"
  />
  <PropertyContainer
    id="3"
    key="3"
  />
</div>
`;
